test_suite5/ALAN/test_suite/alan-2022-examples/failing/006250_mutation.alan
source jNPra begin leave 7 begin <= 76 end
